# adversarialAttacks

./: .gitignore  README.md  populate_clean_classification.py  pyproject.toml  requirements.txt  visualize_adversarial_perturbation.py  visualize_fgsm_progression.py
data/best_models/: fast_ModifiedVGG16.pth
data/perturbation_analysis/: resnet50_cw_0.100.csv  resnet50_cw_0.500.csv  resnet50_cw_1.000.csv  resnet50_cw_10.000.csv  resnet50_cw_2.000.csv  resnet50_cw_20.000.csv  resnet50_cw_5.000.csv  resnet50_fgsm_0.010.csv  resnet50_fgsm_0.030.csv  resnet50_fgsm_0.050.csv  resnet50_fgsm_0.070.csv  resnet50_fgsm_0.090.csv  resnet50_fgsm_0.110.csv  resnet50_fgsm_0.130.csv  resnet50_fgsm_0.150.csv  resnet50_fgsm_0.170.csv  resnet50_fgsm_0.190.csv  resnet50_fgsm_0.210.csv  resnet50_fgsm_0.230.csv  resnet50_fgsm_0.250.csv  resnet50_pgd_0.010.csv  resnet50_pgd_0.030.csv  resnet50_pgd_0.050.csv  resnet50_pgd_0.070.csv  resnet50_pgd_0.090.csv  resnet50_pgd_0.110.csv  resnet50_pgd_0.130.csv  resnet50_pgd_0.150.csv  resnet50_pgd_0.170.csv  resnet50_pgd_0.190.csv  resnet50_pgd_0.210.csv  resnet50_pgd_0.230.csv  resnet50_pgd_0.250.csv  vgg16_cw_0.100.csv  vgg16_cw_0.500.csv  vgg16_cw_1.000.csv  vgg16_cw_10.000.csv  vgg16_cw_2.000.csv  vgg16_cw_20.000.csv  vgg16_cw_5.000.csv  (+26 more)
data/transferability/: Resnet50_trans_to_Vgg16_cw_0.100.csv  Resnet50_trans_to_Vgg16_cw_0.500.csv  Resnet50_trans_to_Vgg16_cw_1.000.csv  Resnet50_trans_to_Vgg16_cw_10.000.csv  Resnet50_trans_to_Vgg16_cw_2.000.csv  Resnet50_trans_to_Vgg16_cw_20.000.csv  Resnet50_trans_to_Vgg16_cw_5.000.csv  Resnet50_trans_to_Vgg16_fgsm_0.010.csv  Resnet50_trans_to_Vgg16_fgsm_0.030.csv  (+57 more)
src/: analyze_fgsm_results.py  analyze_results.py  analyze_transferability.py
(+56 files in other folders)
