[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-attacks"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "Adversarial attacks for protecting creative works from AI scraping"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.65.0",
    "pillow>=8.0.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "tensorboard>=2.10.0",
    "torchattacks>=3.4.0",  # Popular adversarial attack implementations
    "foolbox>=3.3.0",      # Additional attack implementations
    "lpips>=0.1.4",        # Perceptual similarity metrics
    "opencv-python>=4.5.0", # Image processing
    "jupyter>=1.0.0",      # For notebooks
    "seaborn>=0.12.0",     # Enhanced visualizations
    "kaggle>=1.5.16",      # For dataset download
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["adversarialAttacks"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
